<resources>
    <string name="app_name">Raul Lino</string>

    <!-- Menu -->
    <string name="title_home">Home</string>
    <string name="title_map">Mapa</string>
    <string name="title_biography">Nota Biográfica</string>

    <!-- Header -->
    <string name="itinerary">Itinerario</string>
    <string name="raul_lino">Raul Lino</string>

    <!-- Home -->
    <string name="home_arco">Arco</string>
    <string name="home_vertical">Vertical</string>
    <string name="home_janela">Janela</string>
    <string name="title_text_home">O Início</string>
    <string name="text_home">Também é importante referir que apesar do seu leque obra teórica ou escrita, o que se tornou muito determinante, para os seus seguidores aos longo de décadas em Portugal</string>

    <!-- Nota Biográfica -->
    <string name="nb_titulo">Nota Biografica</string>
    <string name="nb_dados"><b>Raul Lino (1879-1974)</b></string>
    <string name="nb_biografia1">Raul Lino da Silva, que ficou conhecido como Raul Lino, foi um arquiteto português que ao longo da sua vida desenvolveu mais de 600 projetos de arquitetura, tendo as suas obras sido edificadas em todo o território nacional. Os seus edifícios, maioritariamente para uso residencial, refletem a predileção pelo uso de materiais locais e tradicionais, bem como a preocupação de minimizar os custos relacionados com a manutenção e conservação dos edifícios, através da seleção e adequação dos sistemas construtivos, fundamentos que atualmente se associam à Arquitetura e Construção Sustentáveis.</string>
    <string name="nb_biografia2">No espólio da obra de Raul Lino estão identificados, pelo menos, 23 projetos de arquitetura que correspondem a novas construções, a transformações e ampliações de edifícios existentes, a um mausoléu e a um pedestal para estátua, destinados ao concelho de Abrantes. Nesta app apresentam-se as obras arquitetónicas que foram, até ao presente, identificadas e localizadas, com a indicação do ano de execução do projeto, da localização e da tipologia do edifício, e ainda uma breve descrição da construção.</string>
    <string name="nb_biografia1_EN">Raul Lino da Silva, who became known as Raul Lino, was a Portuguese architect who throughout his life has carried out over 600 architectural projects for buildings all over the country.        His buildings, mostly for residential use, reflect a preference for the use of local and traditional materials, as well as the concern to minimise costs associated with the maintenance and conservation of buildings by selecting and adapting construction systems, concepts that are currently associated with Sustainable Architecture and Construction.</string>
    <string name="nb_biografia2_EN">Raul Lino\'s legacy includes at least 23 architectural projects for new constructions, alterations and extensions of existing buildings, a mausoleum and a pedestal for a statue for the municipality of Abrantes. This App presents the architectural design works that have so far been identified and located, indicating the year in which the project was carried out, the location and typology of the building, and also a brief description of the construction.</string>
    <string name="nb_descFoto">Retrado de Raul Lino</string>

    <string name="raul_Lino">Raul Lino</string>

    <!-- Map -->
    <string name="plusButton">Botão detalhes</string>
    <string name="o_inicio">O Inicio</string>
    <string name="mestre_da_arquitetura_portuguesa_imprime_vida_em_arcos_ic_nicos_arcos_graciosos_e_s_lidos_transcendem_o_tempo_revelando_uma_beleza_singular">Mestre da arquitetura portuguesa, imprime vida em arcos icónicos. Arcos graciosos e sólidos, transcendem o tempo, revelando uma beleza singular.</string>
    <string name="destaca_se_por_linhas_verticais_imponentes_magn_ficas_colunas_que_transmitem_grandiosidade_e_sofistica_o_em_seus_projetos_intemporais">Destaca-se por linhas verticais imponentes. Magníficas colunas que transmitem grandiosidade e sofisticação em seus projetos intemporais.</string>
    <string name="as_suas_janelas_s_o_molduras_para_descobertas_revelam_paisagens_deslumbrantes_convidando_a_explorar_a_magia_al_m_de_suas_aberturas">As suas janelas são molduras para descobertas. Revelam paisagens deslumbrantes, convidando a explorar a magia além de suas aberturas.</string>

    <!-- Texto estático -->
    <string name="mestre_da_arquitetura_portuguesa_EN">A master of Portuguese architecture, he imprints life in iconic arches. Graceful and solid arches transcend time, revealing a singular beauty.</string>
    <string name="as_suas_janelas_s_o_molduras__EN">Its windows are frames for discovery. They reveal breathtaking landscapes, inviting you to explore the magic beyond their openings.</string>
    <string name="destaca_se_por_linhas_verticais__EN">It stands out for its imposing vertical lines. Magnificent columns that convey grandeur and sophistication in their timeless designs</string>
    <string name="o_inicio_EN">The beginning</string>
    <string name="nb_titulo_EN">Biographical Note</string>
    <string name="nb_dados_EN"><b>Raul Lino (1879-1974)</b></string>
    <string name="esta_app_foi_desenvolvida_no_mbito_de_um_projeto_do_centro_de_tecnologia_restauro_e_valoriza_o_das_artes_techn_art_do_instituto_polit_cnico_de_tomar_financiado_pela_funda_o_para_ci_ncia_e_tecnologia_fct_e_com_a_parceria_da_c_mara_municipal_de_abrantes_e_da_ordem_dos_arquitetos_informa_es_adicionais_sobre_o_projeto_http_www_techneart_ipt_pt_raulino"><![CDATA[Esta app foi desenvolvida no âmbito de um projeto do Centro de Tecnologia, Restauro e Valorização das Artes, Techn&Art, do Instituto Politécnico de Tomar, financiado pela Fundação para Ciência e Tecnologia (FCT), e com a parceria da Câmara Municipal de Abrantes e da Ordem dos Arquitetos.]]></string>
    <string name="este_projeto_financiado_por_fundos_nacionais_atrav_s_da_fct_no_mbito_da_unidade_de_i_d_techn_art_com_a_refer_ncia_uidb_05488_2020"><![CDATA[Este projeto é financiado por fundos nacionais, através da FCT, no âmbito da unidade de I&D TECHN&ART, com a referência UIDB/05488/2020.]]></string>
    <string name="hyperlink">\nInformações adicionais sobre o projeto:\n<a href="http://www.techneart.ipt.pt/raulino">http://www.techneart.ipt.pt/raulino</a></string>
    <string name="esta_app_EN"><![CDATA[This app was developed as part of a project of the Centro de Tecnologia, Restauro e Valorização das Artes, Techn&Art, of the Instituto Politécnico de Tomar, funded by the Fundação para Ciência e Tecnologia (FCT), and with the partnership of the Câmara Municipal de Abrantes and Ordem dos Arquitetos.]]></string>
    <string name="este_projeto_EN"><![CDATA[This project is financed by national funds, through FCT, within the R&D unit TECHN&ART, with the reference UIDB/05488/2020.]]></string>
    <string name="hyperlink_EN">\nFurther information on the project:\n<a href="http://www.techneart.ipt.pt/raulino">http://www.techneart.ipt.pt/raulino</a></string>
    <string name="error_route">Erro ao carregar a rota</string>
    <string name="error_route_invalid">Rota inclui estradas por acabar</string>
    <string name="error_route_technical_issues">Erros técnicos</string>
</resources>